fix: logo wrong size on mobile

--- a/style-navbar.css
+++ b/style-navbar.css
@@ -6,6 +6,10 @@ header {
   padding-right: 1em;
 }
 
+.header-image {
+  padding-left: 1em;
+}
+
 #nav-menu {
   display: none;
   flex-direction: column;
@@ -43,21 +47,16 @@ header {
   justify-self: flex-end;
 }
 
-header > form {
-  display: flex;
-  height:50%;
-  align-self: center;
-  padding-left: 1em;
+@media (width <= 500px) {
+  .header-image {
+    width: 100%;
+  }
 }
 
 @media (width >= 640px) {
   header {
     display: flex;
     gap: 3em;
-  }
-
-  header > img {
-    background-color: var(--charcoal);
   }
 
   #nav-menu {
